--- a/src/components/FormItem/FormItem.module.css
+++ b/src/components/FormItem/FormItem.module.css
@@ -1,4 +1,20 @@
 .FormItem {
   margin-bottom: 1em;
-  align-self: flex-end;
+  align-self: flex-start;
+}
+
+.FormItem span {
+  font-size: 0.7em;
+}
+
+.Hidden {
+  display: none;
+}
+
+.Valid {
+  color: #008000;
+}
+
+.Invalid {
+  color: #ff0000;
 }
