Restyles Register and FormItem to look more nicer

--- a/src/components/FormItem/FormItem.module.css
+++ b/src/components/FormItem/FormItem.module.css
@@ -1,10 +1,21 @@
 .FormItem {
-  margin-bottom: 1em;
-  align-self: flex-start;
+  margin-bottom: 3px;
+}
+
+.FormItem label {
+  width: 10em;
+  display: inline-block;
+  text-align: right;
+}
+
+.FormItem input {
+  margin: 0px 3px;
+  padding: 1px 2px;
 }
 
 .FormItem span {
   font-size: 0.7em;
+  font-weight: bold;
 }
 
 .Hidden {
