--- a/src/components/ScheduleSession/ScheduleSession.module.css
+++ b/src/components/ScheduleSession/ScheduleSession.module.css
@@ -1,3 +1,16 @@
 .TransitionSession {
-  background: gray;
+  background: #ccc;
+}
+
+td:first-child {
+  text-align: right;
+  font-weight: bold;
+  background: #ccc;
+}
+
+td {
+  border: 1px solid black;
+  text-align: center;
+  padding: 1em;
+  width: 33%;
 }
